--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet"> 
         <title>Mahanoro Station</title>
 
         <style>
             body {
                 margin: 0;
+                font-family: 'Rubik', sans-serif;
             }
         </style>
     </head>
