--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
                 margin: 0;
                 font-family: 'Rubik', sans-serif;
             }
+
+            button,
+            input {
+                font-family: 'Rubik', sans-serif;
+            }
         </style>
     </head>
     <body>
